k8s/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-server-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: express-server-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: express-server-app
    spec:
      containers:
      - name: express-server-app
        image: gcr.io/securicam-351906/express-server:v1
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: express-server-service
# spec:
#   type: LoadBalancer
#   ports:
#     - port: 80
#       targetPort: 8080
#   selector:
#     app: express-server
